# sunny

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  ros_entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml  main.yml  opencv.yml  sunny-tis.yml
Dockerfile/: build  deploy  sunny-tis  sunny-tis-dev  test  tiscamera
src/: README.md
src/branch_image/: CMakeLists.txt  README.md  package.xml
src/branch_image/config/: params.yaml
src/branch_image/launch/: main.launch.py
src/branch_image/src/: branch_image.cpp
src/camera_mvs/: CMakeLists.txt  package.xml
src/camera_mvs/config/: params.yaml
src/camera_mvs/launch/: main.launch.py
src/camera_mvs/src/: camera_mvs.cpp
src/camera_tis/: CMakeLists.txt  README.md  package.xml
src/camera_tis/config/: params.yaml
src/camera_tis/src/: camera_tis.cpp
src/config_tis/: README.md
src/config_tis/config/: .params.yaml
src/config_tis/config_tis/: config_tis_node.py
src/gpio_raspberry/: CMakeLists.txt  REAMME.md  package.xml
src/gpio_raspberry/cmake/: FindGPIOD.cmake
src/gpio_raspberry/config/: params.yaml
src/laser_line_center/: CMakeLists.txt  package.xml
src/laser_line_center/test/: CMakeLists.txt  black.cpp  empty.cpp  ksize.cpp  producer_consumer_manager.cpp  small.cpp  threshold.cpp  white.cpp  width.cpp
src/laser_line_filter/: CMakeLists.txt  README.md
src/line_center_reconstruction/: CMakeLists.txt  README.md  package.xml
src/modbus/: CMakeLists.txt  package.xml
src/modbus/src/: modbus.cpp
src/modbus/test/: CMakeLists.txt  client.cpp  connect.c  connect.cpp  server.cpp
src/pipeline/: package.xml
src/pipeline_tis/: package.xml
src/py_pubsub/: package.xml  setup.py
src/resize_image/: CMakeLists.txt  package.xml
src/ros2_numpy/: package.xml  setup.py
src/rotate_image/: CMakeLists.txt  README.md  package.xml
src/seam_tracking/: package.xml  setup.py
src/shared_interfaces/: CMakeLists.txt
src/template/: template.cpp
tools/seam_tracking/: application.py  custom_figure.py  ros_thread.py  seam_tracking.py
tools/seam_tracking_gui/: codes.py  codes.yaml  custom_dialog.py  custom_figure.py  line_data.py  main.py  perspect.py  pick_data.py  point_data.py  ros_node.py  seam_tracking.py  template.py  test.py
(+57 files in other folders)
