macro(test filename)
    add_executable(${filename} ${filename}.cpp)
    target_link_libraries(${filename} ${OpenCV_LIBS})
    target_include_directories(${filename} PUBLIC ${CMAKE_SOURCE_DIR}/include)
    add_test(NAME ${filename} COMMAND ${filename})
endmacro()

foreach(X IN ITEMS empty small black white threshold ksize width perf)
    test(${X})
endforeach()
